--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "recharts": "^2.12.5",
     "sharp": "^0.33.3"
   },
